fix: layout break. enable auto scroll for <pre> or force conditions reorder layout remove media query: equivalent view

--- a/src/Components/ArticleCard/ArticleCard.module.css
+++ b/src/Components/ArticleCard/ArticleCard.module.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    overflow: auto;
 }
 
 .resultHeading {
