--- a/src/Components/ArticleContainer/ArticleContainer.module.css
+++ b/src/Components/ArticleContainer/ArticleContainer.module.css
@@ -3,7 +3,7 @@
 	overflow-wrap: break-word;
 	display: grid;
 	/*grid-template-columns: 3fr 1fr 4fr 1fr;*/
-	grid-template-columns: repeat(auto-fit, minmax(1fr, 4fr));
+	grid-template-columns: minmax(200px, 4fr) minmax(200px, 2fr) minmax(200px, 3fr) minmax(200px, 1fr);
 	grid-auto-flow: column;
 	overflow-x: auto;
 }
@@ -13,13 +13,4 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-}
-
-@media (max-width: 1500px) {
-  .container_main {
-	grid-template-columns: 1fr 1fr 1fr;
-  }
-  .newsList:nth-child(1){
-  	display: none;
-  }
 }
